clean up book show page

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -31,3 +31,18 @@
 .page-header {
     margin-top: 5px;
 }
+
+p {
+    white-space: pre-line;
+}
+
+#moreinfobutton {
+    margin: 0 5px 5px 5px;
+}
+
+hr.style-one {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
