--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -16,7 +16,8 @@
                 <div class="caption-full">
                     <h4 class="pull-right"></h4>
                     <h4><%= book.name %></h4>
-                    <h4><%= book.author %></h4>
+                    <h5>by <%= book.author %></h5>
+                    <hr class="style-one">
                     <p><%= book.description %></p>
                     <p>
                         <em>Submitted by <%= book.postedBy.username %></em>
