--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -20,9 +20,9 @@
                 <div class="caption">
                     <h4><%= book.name %></h4>
                 </div>
-                <p>
-                    <a href="/books/<%= book._id %>" class="btn btn-primary">More Info</a>
-                </p>
+                
+                    <a id="moreinfobutton" href="/books/<%= book._id %>" class="btn btn-primary">More Info</a>
+                
             </div>
         </div>
         <% }); %>
