set a max image size on book show page

--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -12,7 +12,7 @@
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
-                <img class="img-responsive" src="<%= book.image %>"></img>
+                <img class="img-responsive showpage-image" src="<%= book.image %>"></img>
                 <div class="caption-full">
                     <h4 class="pull-right"></h4>
                     <h4><%= book.name %></h4>
