--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -40,9 +40,13 @@ p {
     margin: 0 5px 5px 5px;
 }
 
-hr.style-one {
+.style-one {
     border: 0;
     height: 1px;
     background: #333;
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
+
+img.img-responsive {
+    max-width: 400px;
 }
