--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -20,7 +20,7 @@
                     <hr class="style-one">
                     <p><%= book.description %></p>
                     <p>
-                        <em>Submitted by <%= book.postedBy.username %></em>
+                        <em>- Submitted by <%= book.postedBy.username %></em>
                     </p>
                     <% if(currentUser && book.postedBy.id.equals(currentUser._id)) { %>
                     <a class="btn btn-warning" href="/books/<%= book._id %>/edit">Edit</a>
@@ -35,14 +35,17 @@
                         <a class="btn btn-info" href="/books/<%= book._id %>/comments/new">Add New Comment</a>
                 </div>
                 <% book.comments.forEach(function(comment){ %>
-                <hr>
+                <hr class="style-one">
                 <div class="row">
                     <div class="col-md-12">
-                        <strong><%= comment.author.username %></strong>
-                        <span class="pull-right">7 days ago</span>
+                        <strong><%= comment.title %></strong>
+                        <span class="pull-right"><%= comment.date.toDateString() %></span>
+                        </br>
                         <p>
                             <%= comment.text %>
                         </p>
+                        </br>
+                        <p><em>- Submitted by <%= comment.author.username %></em></p>
                         <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
                             <a class="btn btn-xs btn-warning" href="/books/<%= book._id %>/comments/<%= comment._id %>/edit">Edit</a>
                             <form id="deleteform" action="/books/<%= book._id %>/comments/<%= comment._id %>?_method=DELETE" method="post">
