--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -7,6 +7,9 @@
         <div style="margin: 20px auto">
             <form action="/books/<%= book_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
                 <div class="form-group">
+                    <input class="form-control" type="text" name="comment[title]" placeholder="title" value="<%= comment.title %>"></input>
+                </div>
+                <div class="form-group">
                     <textarea class="form-control" name="comment[text]" rows="10" cols="50" placeholder="your comment goes here"><%= comment.text %></textarea>
                 </div>
                 <div class="form-group">
