--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -7,6 +7,9 @@
         <div style="margin: 20px auto">
             <form action="/books/<%= book._id %>/comments" method="POST">
                 <div class="form-group">
+                    <input class="form-control" type="text" name="comment[title]" placeholder="title"></input>
+                </div>
+                <div class="form-group">
                     <textarea class="form-control" name="comment[text]" rows="10" cols="50" placeholder="your comment goes here"></textarea>
                 </div>
                 <div class="form-group">
