--- a/views/books/editinfo.ejs
+++ b/views/books/editinfo.ejs
@@ -2,21 +2,18 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center">Edit Book</h1>
+        <h1 style="text-align: center">Edit Book Information</h1>
         
         <div style="margin: 20px auto">
             <form action="/books/<%= book._id %>?_method=PUT" method="POST">
                 <div class="form-group">
-                    <input class="form-control" type="text" name="book[name]" placeholder="name" value="<%= book.name %>"></input>
+                    <input class="form-control" type="text" name="book[pages]" placeholder="number of pages" value="<%= book.pages %>"></input>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="book[author]" placeholder="author" value="<%= book.author %>"></input>
+                    <input class="form-control" type="text" name="book[publisher]" placeholder="publisher" value="<%= book.publisher %>"></input>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="book[image]" placeholder="image url" value="<%= book.image %>"></input>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" name="book[description]" rows="10" cols="50" placeholder="description"><%= book.description %></textarea>
+                    <input class="form-control" type="text" name="book[ISBN]" placeholder="ISBN" value="<%= book.ISBN %>"></input>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
