--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -3,12 +3,21 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <p class="lead">BookSite</p>
+            <p class="lead">
+                Information <% if(currentUser && book.postedBy.id.equals(currentUser._id)) { %>
+                                <a style="font-size: 0.5em" href="/books/<%= book._id %>/editinfo">Edit</a>
+                            <% } %>
+            </p>
             <div class="list-group">
-                <li class="list-group-item active">Info 1</li>
-                <li class="list-group-item">Info 2</li>
-                <li class="list-group-item">Info 3</li>
+                <li class="list-group-item"><strong>Pages: </strong><%= book.pages %></li>
+                <li class="list-group-item"><strong>Publisher: </strong><%= book.publisher %></li>
+                <li class="list-group-item"><strong>ISBN: </strong><%= book.ISBN %></li>
             </div>
+            <!--<p class="lead">Purchase Options <a style="font-size: 0.5em" href="">Edit</a></p>-->
+            <!--<div class="list-group">-->
+            <!--    <li class="list-group-item">Amazon</li>-->
+            <!--    <li class="list-group-item">Waterstones</li>-->
+            <!--</div>-->
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
@@ -18,7 +27,7 @@
                     <h4><%= book.name %></h4>
                     <h5>by <%= book.author %></h5>
                     <hr class="style-one">
-                    <p><%= book.description %></p>
+                    <p class="pre-line"><%= book.description %></p>
                     <p>
                         <em>- Submitted by <%= book.postedBy.username %></em>
                     </p>
@@ -41,7 +50,7 @@
                         <strong><%= comment.title %></strong>
                         <span class="pull-right"><%= comment.date.toDateString() %></span>
                         </br>
-                        <p>
+                        <p class="pre-line">
                             <%= comment.text %>
                         </p>
                         </br>
